<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.nauin.android.bapasmob.TentangKami" >

    <Button
        android:id="@+id/btnTenKamAsasMaksudTujuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/ten_kam_asas_maksud_tujuan" />

    <Button
        android:id="@+id/btnTenKamCodeOfConductBank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTenKamAsasMaksudTujuan"
        android:layout_alignStart="@+id/btnTenKamAsasMaksudTujuan"
        android:layout_below="@+id/btnTenKamAsasMaksudTujuan"
        android:text="@string/ten_kam_code_of_conduct_bank" />

    <Button
        android:id="@+id/btnTenKamStrukturOrganisasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTenKamCodeOfConductBank"
        android:layout_alignStart="@+id/btnTenKamCodeOfConductBank"
        android:layout_below="@+id/btnTenKamCodeOfConductBank"
        android:text="@string/ten_kam_struktur_organisasi" />

    <Button
        android:id="@+id/btnTenKamPimpinanDireksi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTenKamStrukturOrganisasi"
        android:layout_alignStart="@+id/btnTenKamStrukturOrganisasi"
        android:layout_below="@+id/btnTenKamStrukturOrganisasi"
        android:text="@string/ten_kam_pimpinan_direksi" />

    <Button
        android:id="@+id/btnTenKamKantorKas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTenKamPimpinanDireksi"
        android:layout_alignStart="@+id/btnTenKamPimpinanDireksi"
        android:layout_below="@+id/btnTenKamPimpinanDireksi"
        android:text="@string/ten_kam_kantor_kas" />

    <Button
        android:id="@+id/btnTenKamSejarah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTenKamKantorKas"
        android:layout_alignStart="@+id/btnTenKamKantorKas"
        android:layout_below="@+id/btnTenKamKantorKas"
        android:text="@string/ten_kam_sejarah" />

</RelativeLayout>